--- a/Learn.Html/Index.html
+++ b/Learn.Html/Index.html
@@ -42,7 +42,10 @@
             基础篇
             <ul>
                 <li>
-                    <a href="https://developer.mozilla.org/zh-CN/">Mdn Web文档</a>
+                    <a target="_blank" href="https://developer.mozilla.org/zh-CN/">Mdn Web文档</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://es6.ruanyifeng.com/">ES6(阮一峰)</a>
                 </li>
             </ul>
         </li>
@@ -50,10 +53,10 @@
             进阶
             <ul>
                 <li>
-                    <a href="https://www.cnblogs.com/zhili/p/DesignPatternSummery.html">C#设计模式</a>
+                    <a target="_blank" href="https://www.cnblogs.com/zhili/p/DesignPatternSummery.html">C#设计模式</a>
                 </li>
                 <li>
-                    <a href="https://iowiki.com/data_structures_algorithms/">数据结构和算法</a>
+                    <a target="_blank" href="https://iowiki.com/data_structures_algorithms/">数据结构和算法</a>
                 </li>
             </ul>
         </li>
