--- a/Learn.Html/Temp.html
+++ b/Learn.Html/Temp.html
@@ -8,14 +8,17 @@
 </body>
 </html>
 <script>
-    function say() {
-         this.a = 1;
-        console.log(a);
-    }
+    //function say() {
+    //    var a = 1;
 
-    var p = {
-        han: say
-    }
-    p.han();
+    //    return function do1() {
+    //        return a = ++a;
+    //    }
+    //}
+
+    //var p = {
+    //    han: say
+    //}
+    //p.han();
     //say();
 </script>
