--- a/Learn.Html/Index.html
+++ b/Learn.Html/Index.html
@@ -152,6 +152,14 @@ var getGlobal = function () {
                     return s;
                     }" href="https://es6.ruanyifeng.com/#docs/string#%E6%A0%87%E7%AD%BE%E6%A8%A1%E6%9D%BF">【ES6】实例：标签模板,防止用户恶意代码（阮一峰）</a>
                 </li>
+                <li>
+                    <a target="_blank" title="let s = '𠮷a';
+for (let ch of s) {
+  console.log(ch.codePointAt(0).toString(16));
+}
+// 20bb7
+// 61" href="https://es6.ruanyifeng.com/#docs/string-methods#%E5%AE%9E%E4%BE%8B%E6%96%B9%E6%B3%95%EF%BC%9AcodePointAt">【ES6】正确的返回码点（阮一峰）</a>
+                </li>
             </ul>
         </li>
     </ul>
