--- a/Learn.Html/Index.html
+++ b/Learn.Html/Index.html
@@ -67,6 +67,9 @@
                 <li>
                     <a target="_blank" href="https://iowiki.com/data_structures_algorithms/">数据结构和算法</a>
                 </li>
+                <li>
+                    <a target="_blank" href="https://zhuanlan.zhihu.com/p/46673002">异步并发并行</a>
+                </li>
             </ul>
         </li>
         <li>
